src/snapshots/afrotd__parser__tests__interpretation_html_7.3.9_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 7.3.9.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Ein legaler Vorwärtspass wird jenseits der neutralen Zone von einem
            berechtigten Spieler eines Teams berührt oder gemufft oder streift
            einen Schiedsrichter. Danach, während der Ball weiterhin fliegt,
            hält ein Spieler von Team A oder Team B einen berechtigten Gegner,
            der sich jenseits der neutralen Zone befindet.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Regeln bezüglich Passbehinderung gelten nicht, nachdem der Pass
                berührt wurde. Wird als Foul während eines freien Balles
                geahndet. Strafe – 10 vom Previous Spot.
            </p>
        </details>
    </div>
</article>
