src/snapshots/afrotd__parser__tests__interpretation_html_8.2.1_10.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.2.1.X
        </p>
    </div>
    <div class="message-body">
        <p>
            Ballträger A33 läuft auf B’s Goalline zu. Er lässt den Ball
            innerhalb der B-1 fallen und denkt, er hätte einen Touchdown
            erzielt. Er läuft durch die Endzone und in Richtung seiner
            Teamzone. Die Schiedsrichter zeigen keinen Touchdown an. Der Fumble
            prallt unmittelbar außerhalb oder innerhalb der Goalline auf den
            Boden, rollt auf dem Boden in der Endzone und wird dort für dead
            erklärt, weil der Ball zur Ruhe kommt und kein Spieler versucht,
            diesen zu recovern.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Wenn ein Fumble inbounds zur Ruhe kommt und kein Spieler
                versucht, den Ball zu recovern, der sich jenseits des
                Fumble-Punktes befindet, gehört der Ball dem fumbelnden Team am
                Punkt des Fumbles. Team A’s Ball an der B-1.
            </p>
        </details>
    </div>
</article>
