src/snapshots/afrotd__parser__tests__interpretation_html_8.2.1_8.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.2.1.VIII
        </p>
    </div>
    <div class="message-body">
        <p>
            Ballträger A22 stürmt in Richtung des rechten Pylon auf B’s
            Goalline. Er hat den Ball in seiner rechten Hand. Sein Fuß berührt
            den Pylon, unmittelbar bevor der Ball (a) den Pylon überquert (b)
            die Verlängerung der Goalline zur Rechten (außerhalb) des Pylon
            überquert.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) und (b) Kein Touchdown in beiden Fällen. Da der Pylon sich
                im Aus befindet, wird der Ball dead, als A22 den Pylon berührt.
                Daher ist der Ball in beiden Fällen dead, bevor er die Goalline
                überqueren kann.
            </p>
        </details>
    </div>
</article>
