src/snapshots/afrotd__parser__tests__interpretation_html_8.2.1_9.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.2.1.IX
        </p>
    </div>
    <div class="message-body">
        <p>
            Ballträger A22 wird geblockt und seine Vorwärtsbewegung wird
            inbounds nahe der Goalline an der Seitenlinie zu seiner Rechten
            gestoppt. Als er gestoppt wird, hat er den Ball in seiner rechten
            Hand, die er über die Goalline (a) innerhalb des Pylon oder (b)
            außerhalb des Pylon ausgestreckt hat.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) Touchdown. Der Ball wurde dead, als A22 ihn jenseits der
                Fläche über der Goalline streckte. (b) Kein Touchdown, da kein
                Teil seines Körpers den Pylon oder die Endzone berührte. In
                diesem Fall wird die Fläche der Goalline nicht verlängert.
            </p>
        </details>
    </div>
</article>
