src/snapshots/afrotd__parser__tests__interpretation_html_8.3.1_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.3.1.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Während eines Try fumbelt Team B, nachdem es in Ballbesitz gelangt
            ist, und Team A recovert den Ball in Team B’s Endzone.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team B kann fumbeln, nachdem es einen Pass abgefangen hat,
                einen Kick gefangen oder recovert hat oder einen Fumble oder
                einen Rückpass gefangen oder recovert hat. Touchdown. Team A
                erhält zwei Punkte (Regel 8.3.2.d.1).
            </p>
        </details>
    </div>
</article>
