src/snapshots/afrotd__parser__tests__interpretation_html_8.3.2_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.3.2.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Bei einem Try kickt B2 einen Team A-Fumble in Team B’s Endzone
            hinein. Der Fumble wird dort von Team B recovert.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Safety, ein Punkt für Team A oder Team A kann die Strafe für
                das illegale Kicken vom Basic Spot annehmen (Regeln 8.3.1 und
                8.3.3.b.1) und den Down wiederholen.
            </p>
        </details>
    </div>
</article>
