src/snapshots/afrotd__parser__tests__interpretation_html_8.3.2_5.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.3.2.V
        </p>
    </div>
    <div class="message-body">
        <p>
            Bei einem Ein-Punkt-Try wird Team A’s Kick geblockt und der Ball,
            der jenseits der neutralen Zone nicht berührt wird, (a) wird von B3
            an der B-1 recovert oder (b) berührt den Boden in Team B’s Endzone.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) B3 kann den Ball advancen; (b) der Ball ist dead, der Try
                ist beendet (Regel 8.3.1).
            </p>
        </details>
    </div>
</article>
